--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
 h1 {
-    text-align: center;
+  text-align: center;
+}
+
+body {
+  background-image: url("../images/train.jpg");
+}
+
+.card-header {
+  font-weight: bold;
 }
